快捷导航栏

--- a/index.html
+++ b/index.html
@@ -5,15 +5,50 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- SEO优化：title、description、keywords -->
     <meta name="description" content="品优购-专业的综合网上购物商城,销售家电、数码通讯、电脑、家居百货、服装服饰等数万个品牌优质商品.便捷、诚信的服务，为您提供愉悦的网上购物体验!">
     <meta name="keywords" content="网上购物,网上商城,手机,笔记本,电脑,相机,手表,存储卡">
+    <title>品优购 - 综合网购首选-正品低价、品质保障、配送及时、轻松购物！</title>
     <!-- 引入favicon图标 -->
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <title>品优购 - 综合网购首选-正品低价、品质保障、配送及时、轻松购物！</title>
+    <!-- 引入样式表 -->
+    <link rel="stylesheet" href="css/base.css">
+    <link rel="stylesheet" href="css/common.css">
+    <link rel="stylesheet" href="./fonts/iconfont.css">
 </head>
 
 <body>
-
+    <!-- 快捷导航栏 -->
+    <section class="shortcut">
+        <div class="w">
+            <!-- 左侧盒子 -->
+            <div class="fl">
+                <ul>
+                    <li>品优购欢迎您！&nbsp;</li>
+                    <li><a href="#">请登录&nbsp;</a></li>
+                    <li><a href="#" class="red">免费注册</a></li>
+                </ul>
+            </div>
+            <!-- 右侧盒子 -->
+            <div class="fr">
+                <ul>
+                    <li>我的订单</li>
+                    <li></li>
+                    <li class="arrow-icon">我的品优购</li>
+                    <li></li>
+                    <li>品优购会员</li>
+                    <li></li>
+                    <li>企业采购</li>
+                    <li></li>
+                    <li class="arrow-icon">关注品优购</li>
+                    <li></li>
+                    <li class="arrow-icon">客户服务</li>
+                    <li></li>
+                    <li class="arrow-icon">网站导航</li>
+                </ul>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
