--- a/index.html
+++ b/index.html
@@ -126,6 +126,145 @@
 
     </nav>
 
+    <div class="w">
+        <main>
+            <!-- 焦点图 -->
+            <div class="focus">
+                <ul>
+                    <li>
+                        <img src="./upload/focus1.png" alt="">
+                    </li>
+                </ul>
+            </div>
+            <!-- 新闻快报模板 -->
+            <div class="newsflash">
+                <!-- 新闻模块 -->
+                <div class="news">
+                    <!-- 新闻头部 -->
+                    <div class="news-hd">
+                        <h5>品优购快报</h5>
+                        <a href="#" class="more">更多</a>
+                    </div>
+                    <div class="news-bd">
+                        <ul>
+                            <li>
+                                <a href="#">
+                                    <strong>[重磅]</strong>
+                                    它来了它来了，pink老师走来了, 它是谁？
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <strong>[重磅]</strong>
+                                    它来了它来了，pink老师走来了, 它是谁？
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <strong>[重磅]</strong>
+                                    它来了它来了，pink老师走来了, 它是谁？
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <strong>[重磅]</strong>
+                                    它来了它来了，pink老师走来了, 它是谁？
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <strong>[重磅]</strong>
+                                    它来了它来了，pink老师走来了, 它是谁？
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <!-- 生活服务 -->
+                <div class="lifeservice">
+                    <ul>
+                        <li>
+                            <a href="#">
+                                <i></i>
+                                <p>话费</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <i></i>
+                                <p>话费</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <i></i>
+                                <p>话费</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <i></i>
+                                <p>话费</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <i></i>
+                                <p>话费</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <i></i>
+                                <p>话费</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <i></i>
+                                <p>话费</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <i></i>
+                                <p>话费</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <i></i>
+                                <p>话费</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <i></i>
+                                <p>话费</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <i></i>
+                                <p>话费</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <i></i>
+                                <p>话费</p>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="bargain">
+                    <img src="./upload/bargain.png" alt="">
+                </div>
+            </div>
+        </main>
+    </div>
+
+
     <footer>
         <div class="w">
             <!-- 服务模块 -->
